--- a/На заре.md
+++ b/На заре.md
@@ -1,6 +1,7 @@
  ```
- Em      C   G      Bm
-1)Ровный бег моей судьбы, 
+[куплет 1]
+  Em      C   G      Bm
+  Ровный бег моей судьбы, 
   Em      C      G      Bm
   Ночь, печаль и блеск души, 
   Am      Am      Dsus   D  
@@ -8,14 +9,15 @@
   Em C G D   
   В небесах. 
 
-Припев: 
+[Припев]
 Em C G D Em C G D  
 На заре голоса зовут меня. 
 Em C G D     Em    C G D 
 На заре небеса зовут меня. 
 
+[куплет 2]
   Em      C   G      Bm
-2)Долгий век моей звезды, 
+  Долгий век моей звезды, 
   Em      C   G      Bm
   Сонный блеск земной росы, 
   Am      Am      Dsus   D 
@@ -23,14 +25,15 @@ Em C G D     Em    C G D
   Em C G D 
   В небесах. 
 
-Припев: 
+[Припев]
 Em C G D Em C G D   
 На заре голоса зовут меня. 
 Em C G D     Em    C G D 
 На заре небеса зовут меня. 
 
+[куплет 3]
   Em      C   G      Bm
-3)Солнца свет и сердца звук, 
+  Солнца свет и сердца звук, 
   Em      C   G      Bm
   Робкий взгляд и сила рук, 
   Am      Am      Dsus  D 
@@ -38,7 +41,7 @@ Em C G D     Em    C G D
   Em C G D 
   В небесах. 
 
-Припев: 
+[Припев]
 Em C G D Em C G D 
 На заре голоса зовут меня. 
 Em C G D     Em    C G D 
